# geo_sentry

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml  requirements.txt  test.dxf  test.geojson
.py_debug/: check_locale.py  check_matplotlib.py
data/database/: database.db  query.sql
libs/databases/: db_connection.py
libs/helpers/: csv_to_gkn.py  dxf_editor.py  dxf_to_tif.py  md_to_pdf.py  pdf_merger.py  reduce_dxf.lsp  svg_scaler.py
libs/utils/: calc_helpers.py  calculations.py  config_loader.py  config_logger.py  config_plot.py  config_variables.py  df_helpers.py  file_manager.py  logger_config.py  plot_config.py  plot_helpers.py  test.py  text_helpers.py  validation_helpers.py  variables_helpers.py
modules/calculations/: config_handler.py  data_analysis.py  data_processor.py  data_transformer.py  excel_handler.py  excel_parser.py  excel_processor.py  gkn_processor.py  matrix_processor.py  path_handler.py  text_processor.py
modules/dashboard/: charts.py  maps.py  profiles.py  tables.py
modules/forecast/: analysis.py  data_analysis.py  forecast.py  predictive-pipeline.py
modules/plotter/: map_type_01.py  (+9 more)
notebooks/: inc_calculation.ipynb  operativity.ipynb  ts_eda.ipynb
scripts/: chart_plotter.py  forecast_analysis.py  forecast_analysis_prophet.py  forecast_plotter.py  pdf_merger.py  plotter_cpcv.py  plotter_pct.py  plotter_pcv.py  plotter_pta.py  plotter_sacv.py  sensor_forecaster.py  sensor_plotter.py  sensor_process.py  sensor_processor.py  test_processor.py
test/: test_calculations.py  test_gkn_processor.py  test_inc.py  test_reports.py
(+586 files in other folders)
