[tool.poetry]
name = "geo_sentry"
version = "0.1.0"
description = "A project for geospatial data analysis and visualization."
authors = ["Joel Efrain <etalarconjoel@gmail.com>"]
license = "BSL 1.1"
readme = "README.md"
packages = [{include = "geo_sentry"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
tomli = "^2.2.1"
openpyxl = "^3.1.5"
seaborn = "^0.13.2"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
adjustText = "^1.3.0"
ezdxf = "^1.4.1"
svglib = "^1.5.1"
statsmodels = "^0.14.4"
prophet = "^1.1.6"
bokeh = "^3.7.2"
PyPDF2 = "^3.0.1"

[tool.poetry.urls]
"Homepage" = "https://github.com/joelefrain/geo_sentry"
"Bug Tracker" = "https://github.com/joelefrain/geo_sentry/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
